--- a/index.html
+++ b/index.html
@@ -192,20 +192,20 @@ pre code {
 <div id="the-course" class="section level2">
 <h2>the course</h2>
 <p>I was really glad to find out about this doctoral course provided by Helsinki University. If I recall correctly, this was the result of the great work of the doctoral office and their kind (daily) emails promoting available and upcoming courses.</p>
-<p>I am a “second and a half” year doctoral student and very much into statistics. Despite my colleagues who hate it. Because of my enthusiasm, I took this course even though I constantly struggle to manage with all, my studies and working full time (as an MD). I also have kids I should pay some attention to. I have, however, promised to buy a dog for them once my PhD is finished so I’m not in any hurry here, haha.</p>
+<p>I am a third year doctoral student and very much into statistics. Despite my colleagues who hate it. Because of my enthusiasm, I took this course even though I constantly struggle to manage with scheduling my studies and working (as an MD). I also have kids I should pay some attention to. I have, however, promised to buy a dog for them once my PhD is finished so I’m not in any hurry here, haha.</p>
 <p>I enjoy the opportunity to study things online (whenever I have some free time!) and this course seems REALLY well organized in that regard. So thanks in advance. I hope I manage to get this first week’s assignment done in time, I hate receiving zero points. I’m also sorry for the students that have the dishonor to review my output this week as it may not be very glamorous. My apologies.</p>
 <p>I expect my learn new and foremost <strong>faster</strong> and more efficient ways to use R. I was also surprised to hear about automated reports - that sounds fantastic (I think my supervisors would agree).</p>
 </div>
 <div id="the-r-for-health-data-science-book-and-the-exercise-set-1" class="section level2">
 <h2>the R for Health Data Science book and the Exercise Set 1</h2>
-<p>All the materials provided in the moodle environment are easy to read and greatly written! I guess taking this course now (not earlier, before any “real life statistical needs”) is more beneficial for me than if I had participated earlier, even though now as I am going through the course material I realize that I would have saved several hours of work, had I known these things earlier. But it’s always better late than never, right?</p>
-<p>As I have done some work with R before, the first chapters in the HDS book sounded familiar. However, I learned that search engines prefer “older” scripts, which is good to know. I quess R programming language will evolve in time like any human language! In a couple of thousand years, nobody understands any “pipes”… Brouching through the book and excercise set 1 I already came across answers (=script) for some issues I have had previously working with datasets. For example, how to handle missing data (NAs) in R properly. This almost brought tears to my weary eyes. So, this truly is a “crash course”!</p>
+<p>All the materials provided in the moodle environment are easy to read and greatly written! I guess taking this course now (not earlier, before any “real life statistical needs”) is more beneficial for me than if I had participated earlier – even though now as I’m going through the course material, I realize I would have saved several hours of work had I known these things earlier. But it’s always better late than never, right?</p>
+<p>As I have worked with R before, the first chapters in the RHDS book sounded familiar. However, I learned that search engines prefer “older” scripts over new ones, building the results upon the inverted pyramid of information, I quess. This is good to know. I quess R programming language will evolve in time like any “human” language! In a couple of thousand years, nobody understands any “pipes”… Brouching through the book and excercise set 1 I already came across answers (=script) for some issues I have had previously working with R. For example, how to handle missing data (NAs) in R properly. This almost brought tears to my weary eyes. So, this truly is a “crash course”!</p>
 <p>Getting started with R Markdown was executed so sneakily I didn’t ever realize I started using it. Untill I did, and then started wondering if the package for R markdown was to be downloaded first..?</p>
 <p><em>This is the link to my gitHub repository: <a href="https://github.com/norppakeitto/IODS-project" class="uri">https://github.com/norppakeitto/IODS-project</a></em></p>
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Mon Nov  6 20:52:22 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Tue Nov  7 08:30:34 2023&quot;</code></pre>
 <p>The text continues here.</p>
 <hr />
 </div>
@@ -219,7 +219,7 @@ date()</code></pre>
 <li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Mon Nov  6 20:52:23 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Tue Nov  7 08:30:34 2023&quot;</code></pre>
 <p>Here we go again…</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the course!)</p>
